; ModuleID = '/home/carl/AnghaBench/systemd/src/udev/extr_udev-builtin-usb_id.c_set_scsi_type.c'
source_filename = "/home/carl/AnghaBench/systemd/src/udev/extr_udev-builtin-usb_id.c_set_scsi_type.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"generic\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"disk\00", align 1
@.str.2 = private unnamed_addr constant [5 x i8] c"tape\00", align 1
@.str.3 = private unnamed_addr constant [8 x i8] c"optical\00", align 1
@.str.4 = private unnamed_addr constant [3 x i8] c"cd\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i8*, i64)* @set_scsi_type to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_scsi_type(i8* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i8*, align 8
  %9 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8** %9, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = call i32 @strtoul(i8* %10, i8** %8, i32 0)
  store i32 %11, i32* %7, align 4
  %12 = load i8*, i8** %8, align 8
  %13 = load i8*, i8** %5, align 8
  %14 = icmp ne i8* %12, %13
  br i1 %14, label %15, label %23

15:                                               ; preds = %3
  %16 = load i32, i32* %7, align 4
  switch i32 %16, label %21 [
    i32 0, label %17
    i32 14, label %17
    i32 1, label %18
    i32 4, label %19
    i32 7, label %19
    i32 15, label %19
    i32 5, label %20
  ]

17:                                               ; preds = %15, %15
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i8** %9, align 8
  br label %22

18:                                               ; preds = %15
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0), i8** %9, align 8
  br label %22

19:                                               ; preds = %15, %15, %15
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.3, i64 0, i64 0), i8** %9, align 8
  br label %22

20:                                               ; preds = %15
  store i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.4, i64 0, i64 0), i8** %9, align 8
  br label %22

21:                                               ; preds = %15
  br label %22

22:                                               ; preds = %21, %20, %19, %18, %17
  br label %23

23:                                               ; preds = %22, %3
  %24 = load i8*, i8** %4, align 8
  %25 = load i64, i64* %6, align 8
  %26 = load i8*, i8** %9, align 8
  %27 = call i32 @strscpy(i8* %24, i64 %25, i8* %26)
  ret void
}

declare dso_local i32 @strtoul(i8*, i8**, i32) #1

declare dso_local i32 @strscpy(i8*, i64, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
